<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/parkingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/togglebutton"
            android:textOff="@string/estacionarme"
            android:textOn="@string/salir" />

        <ToggleButton
            android:id="@+id/obstacleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/togglebutton"
            android:textOff="@string/obst_culo"
            android:textOn="@string/cancelar" />

        <TextView
            android:id="@+id/places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="placeholder"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="invisible" />

        <Button
            android:id="@+id/waitingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleWaitButton"
            android:text="Esperar" />

        <TextView
            android:id="@+id/remainingTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esperar"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleShowParkingButton"
            android:text="@string/demasiada_espera"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>